--- a/wox.ui.flutter/wox/windows/runner/Runner.rc
+++ b/wox.ui.flutter/wox/windows/runner/Runner.rc
@@ -95,7 +95,7 @@ BEGIN
             VALUE "InternalName", "wox-ui" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023-2025 Wox. All rights reserved." "\0"
             VALUE "OriginalFilename", "wox-ui.exe" "\0"
-            VALUE "ProductName", "wox-ui" "\0"
+            VALUE "ProductName", "Wox" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
