feat(api): Implement UpdateableResult for real-time UI updates
- Added ResetForReexecute method in ShellHistoryManager to reset command execution state.
- Enhanced WPMPlugin install and upgrade commands to show progress updates in the UI.
- Modified UpdateResult method in UI implementation to handle response and return success status.
- Updated package dependencies in Node.js and Python plugin hosts to use local paths for development.
- Introduced UpdateableResult interface in TypeScript for direct UI updates without polling.
- Updated ActionContext to include ResultId for better action handling.
- Enhanced Python plugin API to support UpdateableResult for real-time updates.
- Improved Flutter UI to handle UpdateableResult and reflect changes in the UI.
- Added comprehensive documentation for UpdateableResult usage in both TypeScript and Python.

--- a/wox.plugin.host.python/pyproject.toml
+++ b/wox.plugin.host.python/pyproject.toml
@@ -6,7 +6,11 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = "GPL-3.0"
 authors = [{ name = "Wox Team", email = "qianlifeng@gmail.com" }]
-dependencies = ["loguru", "websockets", "wox-plugin==0.0.49"]
+dependencies = [
+    "loguru",
+    "websockets",
+    "wox-plugin @ file:///Users/qianlifeng/Projects/Wox/wox.plugin.python",
+]
 
 [project.scripts]
 run = "wox_plugin_host.__main__:run"
@@ -17,6 +21,9 @@ dev = ["shiv", "ruff", "mypy"]
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [tool.ruff]
 line-length = 140
