--- a/wox.plugin.host.nodejs/package.json
+++ b/wox.plugin.host.nodejs/package.json
@@ -30,7 +30,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@wox-launcher/wox-plugin": "^0.0.85",
+    "@wox-launcher/wox-plugin": "file:../wox.plugin.nodejs",
     "dayjs": "^1.11.13",
     "promise-deferred": "^2.0.4",
     "winston": "^3.17.0",
