--- a/wox.plugin.host.python/pyproject.toml
+++ b/wox.plugin.host.python/pyproject.toml
@@ -6,11 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = "GPL-3.0"
 authors = [{ name = "Wox Team", email = "qianlifeng@gmail.com" }]
-dependencies = [
-    "loguru",
-    "websockets",
-    "wox-plugin @ file:///Users/qianlifeng/Projects/Wox/wox.plugin.python",
-]
+dependencies = ["loguru", "websockets", "wox-plugin==0.0.49"]
 
 [project.scripts]
 run = "wox_plugin_host.__main__:run"
@@ -21,9 +17,6 @@ dev = ["shiv", "ruff", "mypy"]
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
-
-[tool.hatch.metadata]
-allow-direct-references = true
 
 [tool.ruff]
 line-length = 140
