--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,16 +6,16 @@ on:
       - master
 
 jobs:
-  test:
-    runs-on: [self-hosted, macOS, ARM64]
-    steps:
-      - uses: actions/checkout@v3
-      - name: Test
-        run: make test
+  # test:
+  #   runs-on: [self-hosted, macOS, ARM64]
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Test
+  #       run: make test
 
   build:
     name: Build ${{ matrix.os }} ${{ matrix.arch }}
-    needs: test
+    # needs: test
     strategy:
       matrix:
         include:
