feat(calculator): enhance parsing and tokenization for leading dot decimals. close #4296
* Improved `parser.go` to handle leading dot decimals in expressions.
* Added comprehensive tests in `calculator_test.go` for various leading dot scenarios.
* Introduced `tokenizer_test.go` to validate tokenization logic for leading dot inputs.
* Updated `Makefile` to ensure resource directories are created for tests.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,12 +6,12 @@ on:
       - master
 
 jobs:
-  # test:
-  #   runs-on: [self-hosted, macOS, ARM64]
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Test
-  #       run: make test
+  test:
+    runs-on: [self-hosted, macOS, ARM64]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Test
+        run: make test
 
   build:
     name: Build ${{ matrix.os }} ${{ matrix.arch }}
