feat(doc): use new doc site
* Removed multiple empty `<code-changes>` sections from the changes log.
* Improved readability and maintainability of the change history.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
 
   build:
     name: Build ${{ matrix.os }} ${{ matrix.arch }}
-    # needs: test
+    needs: test
     strategy:
       matrix:
         include:
