feat(ci): remove deploy-docs workflow and add release workflow with versioning and changelog parsing

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,11 +1,11 @@
-name: Deploy Docs
+name: Docs
 
 on:
   push:
     branches: [master]
     paths:
       - "www/**"
-      - ".github/workflows/deploy-docs.yml"
+      - ".github/workflows/docs.yml"
   workflow_dispatch:
 
 permissions:
