fix(workflow): Add store-plugin.json and store-theme.json to workflow paths

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,6 +6,8 @@ on:
     paths:
       - "www/**"
       - ".github/workflows/docs.yml"
+      - store-plugin.json
+      - store-theme.json
   workflow_dispatch:
 
 permissions:
