--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -6,6 +6,7 @@ on:
   schedule:
     - cron: "30 1 * * *"
     - cron: "30 12 * * *"
+  workflow_dispatch:
 
 jobs:
   stale:
@@ -20,7 +21,7 @@ jobs:
           days-before-stale: 15
           days-before-close: 5
           days-before-pr-close: -1
-          exempt-all-milestones: true
+          exempt-all-milestones: false
           close-issue-message: "This issue was closed because it has been stale for 20 days with no activity. If you feel this issue still needs attention please feel free to reopen."
           stale-pr-label: "no-pr-activity"
           exempt-issue-labels: "keep-fresh"
