refactor(context): a big refactor on contextdata, breaking changes.

--- a/wox.ui.flutter/wox/macos/Runner/Release.entitlements
+++ b/wox.ui.flutter/wox/macos/Runner/Release.entitlements
@@ -6,5 +6,7 @@
 	<false/>
 	<key>com.apple.security.network.client</key>
     <true/>
+	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
 </dict>
 </plist>
