--- a/wox.ui.flutter/wox/macos/Runner/DebugProfile.entitlements
+++ b/wox.ui.flutter/wox/macos/Runner/DebugProfile.entitlements
@@ -10,5 +10,7 @@
 	<true/>
 	<key>com.apple.security.network.client</key>
     <true/>
+	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
 </dict>
 </plist>
