--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -3,9 +3,9 @@
 name: Mark stale issues
 
 on:
-  schedule:
-    - cron: "30 1 * * *"
-    - cron: "30 12 * * *"
+  # schedule:
+  #   - cron: "30 1 * * *"
+  #   - cron: "30 12 * * *"
   workflow_dispatch:
 
 jobs:
