feat: enhance ai prompt skills
- Introduced a new Bash script plugin template for Wox, enabling users to create script-based plugins easily.
- Added comprehensive documentation for internationalization (i18n) support in plugins.
- Defined JSON schema specifications for plugin manifests, including required and optional fields.
- Provided an overview of the Wox plugin architecture, detailing plugin types and development workflows.
- Included guidelines for packaging and publishing plugins, along with scaffolding instructions for Node.js and Python plugins.
- Enhanced the SDK references for both Node.js and Python, detailing core interfaces and public API methods.
- Implemented a script to scaffold new Wox plugins, allowing for easy setup and customization.

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@ wox.exe
 wox.core/wox
 www/docs/.vitepress/cache
 www/docs/.vitepress/dist
+.github/skills
+.codex/skills
+claude/skills
 placeholder
 crash.log
 release/
