--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ on:
 
 permissions:
   contents: write
+  id-token: write
+  attestations: write
 
 jobs:
   build:
@@ -42,6 +44,15 @@ jobs:
         env:
           KEYCHAINPWD: ${{ matrix.needs_keychain && secrets.KEYCHAINPWD || '' }}
 
+      - name: Attest build provenance
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-path: ${{ matrix.asset_path }}
+      - name: Attest AppImage provenance
+        if: matrix.os == 'Linux'
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-path: ./release/wox-linux-amd64.AppImage
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
