feat: add Windows unsigned artifact upload and signing steps in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,6 +58,31 @@ jobs:
         run: make build
         env:
           KEYCHAINPWD: ${{ matrix.needs_keychain && secrets.KEYCHAINPWD || '' }}
+
+      # Windows code signing via SignPath
+      - name: Upload unsigned artifact (Windows)
+        if: matrix.os == 'Windows'
+        id: upload-unsigned-artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: unsigned-${{ matrix.asset_name }}
+          path: ${{ matrix.asset_path }}
+          retention-days: 1
+
+      - name: Sign with SignPath (Windows)
+        if: matrix.os == 'Windows'
+        uses: signpath/github-action-submit-signing-request@v2
+        with:
+          api-token: ${{ secrets.SIGNPATH_API_TOKEN }}
+          organization-id: ${{ secrets.SIGNPATH_ORGANIZATION_ID }}
+          project-slug: Wox
+          signing-policy-slug: test-signing
+          github-artifact-id: ${{ steps.upload-unsigned-artifact.outputs.artifact-id }}
+          wait-for-completion: true
+          output-artifact-directory: ./release
+          parameters: |
+            version: ${{ github.sha }}
+
       - name: Attest build provenance
         uses: actions/attest-build-provenance@v1
         with:
