feat: add system dependencies installation for Linux in build workflow

--- a/.github/workflows/build-core.yml
+++ b/.github/workflows/build-core.yml
@@ -62,6 +62,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Install system dependencies (Linux)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            clang \
+            cmake \
+            ninja-build \
+            pkg-config \
+            libgtk-3-dev \
+            libblkid-dev \
+            liblzma-dev \
+            libsecret-1-dev \
+            libglib2.0-dev \
+            libgirepository1.0-dev \
+            libx11-dev \
+            libxext-dev \
+            libxfixes-dev \
+            libxi-dev \
+            libxinerama-dev \
+            libxrandr-dev \
+            libxkbcommon-dev \
+            libxkbcommon-x11-dev \
+            libxcursor-dev \
+            libxtst-dev
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
@@ -317,7 +341,19 @@ jobs:
             libgtk-3-dev \
             libblkid-dev \
             liblzma-dev \
-            libsecret-1-dev
+            libsecret-1-dev \
+            libglib2.0-dev \
+            libgirepository1.0-dev \
+            libx11-dev \
+            libxext-dev \
+            libxfixes-dev \
+            libxi-dev \
+            libxinerama-dev \
+            libxrandr-dev \
+            libxkbcommon-dev \
+            libxkbcommon-x11-dev \
+            libxcursor-dev \
+            libxtst-dev
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
