fix: enable macOS notarization and Windows signpath in build workflow

--- a/.github/workflows/build-core.yml
+++ b/.github/workflows/build-core.yml
@@ -288,7 +288,7 @@ jobs:
           cache: true
 
       - name: Enable Flutter desktop (Windows)
-        shell: msys2 {0}
+        shell: pwsh
         run: flutter config --enable-windows-desktop
 
       - name: Build
