--- a/.github/workflows/build-core.yml
+++ b/.github/workflows/build-core.yml
@@ -220,6 +220,128 @@ jobs:
           path: ./release/wox-mac-arm64.dmg
           retention-days: ${{ inputs.artifact_retention_days }}
 
+  build_macos_amd64:
+    name: Build macOS AMD64
+    needs: test
+    runs-on: macos-13
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: wox.core/go.mod
+          cache: true
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 8.15.5
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: pnpm
+          cache-dependency-path: |
+            wox.plugin.host.nodejs/pnpm-lock.yaml
+            wox.plugin.nodejs/pnpm-lock.yaml
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+          cache: true
+      - name: Install create-dmg
+        run: brew install create-dmg
+      - name: Enable Flutter desktop (macOS)
+        run: flutter config --enable-macos-desktop
+
+      - name: Validate macOS signing/notarization secrets
+        if: ${{ inputs.require_macos_notarize }}
+        env:
+          MACOS_KEYCHAINPWD: ${{ secrets.MACOS_KEYCHAINPWD }}
+          MACOS_SIGN_P12_BASE64: ${{ secrets.MACOS_SIGN_P12_BASE64 }}
+          MACOS_SIGN_P12_PASSWORD: ${{ secrets.MACOS_SIGN_P12_PASSWORD }}
+          MACOS_SIGN_IDENTITY: ${{ secrets.MACOS_SIGN_IDENTITY }}
+          APPLE_API_KEY_ID: ${{ secrets.APPLE_API_KEY_ID }}
+          APPLE_API_ISSUER_ID: ${{ secrets.APPLE_API_ISSUER_ID }}
+          APPLE_API_PRIVATE_KEY_P8_BASE64: ${{ secrets.APPLE_API_PRIVATE_KEY_P8_BASE64 }}
+        run: |
+          set -euo pipefail
+          for v in MACOS_KEYCHAINPWD MACOS_SIGN_P12_BASE64 MACOS_SIGN_P12_PASSWORD MACOS_SIGN_IDENTITY APPLE_API_KEY_ID APPLE_API_ISSUER_ID APPLE_API_PRIVATE_KEY_P8_BASE64; do
+            if [ -z "${!v:-}" ]; then
+              echo "Missing required secret: $v" >&2
+              exit 1
+            fi
+          done
+
+      - name: Setup macOS signing keychain
+        if: ${{ inputs.require_macos_notarize }}
+        env:
+          MACOS_KEYCHAINPWD: ${{ secrets.MACOS_KEYCHAINPWD }}
+          MACOS_SIGN_P12_BASE64: ${{ secrets.MACOS_SIGN_P12_BASE64 }}
+          MACOS_SIGN_P12_PASSWORD: ${{ secrets.MACOS_SIGN_P12_PASSWORD }}
+        run: |
+          set -euo pipefail
+          KEYCHAIN_PATH="$RUNNER_TEMP/build.keychain-db"
+          CERT_PATH="$RUNNER_TEMP/signing_cert.p12"
+
+          echo "$MACOS_SIGN_P12_BASE64" | base64 --decode > "$CERT_PATH"
+
+          security create-keychain -p "$MACOS_KEYCHAINPWD" "$KEYCHAIN_PATH"
+          security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
+          security unlock-keychain -p "$MACOS_KEYCHAINPWD" "$KEYCHAIN_PATH"
+          security default-keychain -s "$KEYCHAIN_PATH"
+          security list-keychains -d user -s "$KEYCHAIN_PATH"
+
+          security import "$CERT_PATH" -k "$KEYCHAIN_PATH" -P "$MACOS_SIGN_P12_PASSWORD" -T /usr/bin/codesign -T /usr/bin/security
+          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$MACOS_KEYCHAINPWD" "$KEYCHAIN_PATH"
+
+      - name: Configure notarization (App Store Connect API Key)
+        if: ${{ inputs.require_macos_notarize }}
+        env:
+          APPLE_API_KEY_ID: ${{ secrets.APPLE_API_KEY_ID }}
+          APPLE_API_ISSUER_ID: ${{ secrets.APPLE_API_ISSUER_ID }}
+          APPLE_API_PRIVATE_KEY_P8_BASE64: ${{ secrets.APPLE_API_PRIVATE_KEY_P8_BASE64 }}
+        run: |
+          set -euo pipefail
+          API_KEY_PATH="$RUNNER_TEMP/AuthKey.p8"
+          echo "$APPLE_API_PRIVATE_KEY_P8_BASE64" | base64 --decode > "$API_KEY_PATH"
+          xcrun notarytool store-credentials wox \
+            --key "$API_KEY_PATH" \
+            --key-id "$APPLE_API_KEY_ID" \
+            --issuer "$APPLE_API_ISSUER_ID"
+
+      - name: Build
+        run: make build
+        env:
+          MACOS_KEYCHAINPWD: ${{ inputs.require_macos_notarize && secrets.MACOS_KEYCHAINPWD || '' }}
+          MACOS_SIGN_IDENTITY: ${{ inputs.require_macos_notarize && secrets.MACOS_SIGN_IDENTITY || '' }}
+
+      - name: Attest build provenance
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-path: ./release/wox-mac-amd64.dmg
+
+      - name: Staple and validate dmg
+        if: ${{ inputs.require_macos_notarize }}
+        run: |
+          set -euo pipefail
+          xcrun stapler staple ./release/wox-mac-amd64.dmg
+          spctl -a -vv -t install ./release/wox-mac-amd64.dmg
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: wox-mac-amd64.dmg
+          path: ./release/wox-mac-amd64.dmg
+          retention-days: ${{ inputs.artifact_retention_days }}
+
   build_windows_amd64:
     name: Build Windows AMD64
     needs: test
@@ -227,11 +349,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install make (Windows)
+        shell: pwsh
+        run: choco install -y make
+
       - name: Validate SignPath secrets
         if: ${{ inputs.require_windows_signpath }}
         env:
           SIGNPATH_API_TOKEN: ${{ secrets.SIGNPATH_API_TOKEN }}
           SIGNPATH_ORGANIZATION_ID: ${{ secrets.SIGNPATH_ORGANIZATION_ID }}
+        shell: bash
         run: |
           set -euo pipefail
           for v in SIGNPATH_API_TOKEN SIGNPATH_ORGANIZATION_ID; do
@@ -240,16 +367,6 @@ jobs:
               exit 1
             fi
           done
-
-      - name: Setup MSYS2 (MINGW64)
-        uses: msys2/setup-msys2@v2
-        with:
-          msystem: MINGW64
-          update: true
-          install: >-
-            make
-            tar
-            unzip
 
       - name: Setup Go
         uses: actions/setup-go@v5
@@ -292,7 +409,7 @@ jobs:
         run: flutter config --enable-windows-desktop
 
       - name: Build
-        shell: msys2 {0}
+        shell: bash
         run: make build
 
       - name: Upload unsigned artifact (Windows)
@@ -400,6 +517,8 @@ jobs:
           chmod +x appimagetool.AppImage
       - name: Build
         run: xvfb-run -a make build
+        env:
+          APPIMAGE_TOOL: ./appimagetool.AppImage
       - name: Attest build provenance
         uses: actions/attest-build-provenance@v1
         with:
